<resources>
    <string name="app_name">Salto App</string>

    <!--Button-->
    <string name="create_new_store">Create new store</string>
    <string name="create">Create</string>
    <string name="login">Login</string>

    <!--Text-->
    <string name="store_name">Store Name</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee">Employee</string>
    <string name="front_door">Front Door</string>
    <string name="storage_room">Storage Room</string>
    <string name="authorization">Authorization</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="next">Next</string>
    <string name="is_open">is open</string>
    <string name="is_locked">is locked</string>
    <string name="lock_door">Lock Door</string>
    <string name="open_door">Open Door</string>
    <string name="access_denied">Access Denied</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salto_app">Salto App</string>


    <!--Switch-->


</resources>
